# portfolio

./: .env  .gitignore  Cargo.toml  Dioxus.toml  LICENSE  build.rs  composer.json  index.html  package-lock.json
assets/: boot.css  brute.css  main.css
content/logs/: post-1.md  post-2.md  post-3.md  post-4.md  post-5.md  post-6.md  post-7.md  post-8.md
migrations/: Version20221130160208.php
public/scripts/: index.js
public/style/: main.css
src/: main.rs  router.rs
src/Controller/: HomeController.php
src/DataFixtures/: AppFixtures.php
src/Entity/: Category.php  Project.php
src/Factory/: CategoryFactory.php  ProjectFactory.php
src/Repository/: CategoryRepository.php  ProjectRepository.php
src/app/: globals.css  layout.tsx  not-found.tsx  page.tsx
src/components/: admonition.rs  icon.rs  layout.rs  markdown.rs  mod.rs  navbar.rs  theme_toggle.rs
src/components/animate/land-computer/: land-computer.tsx
src/components/nav-bar/: config-nav-bar.ts  index.tsx  nav-item.tsx
src/components/nav-bar/burger-menu/: burger-item.tsx  burger-menu.tsx
src/pages/: home.rs  log.rs  logs.rs  mod.rs
templates/home/: index.html.twig
