[package]
name = "Engine_Dev"
version = "0.1.0"
authors = ["RetherSzu <rether.szu@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "0.7.1", features = ["router", "fullstack"] }
pulldown-cmark = "0.13.1"

[features]
default = ["web"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]
server = ["dioxus/server"]

[build-dependencies]
gray_matter = "0.3.2"
serde = { version = "1.0.228", features = ["derive"] }
